--- a/Example/Realtime_Audio/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
+++ b/Example/Realtime_Audio/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
-C:\Users\DT\Desktop\Realtime_Audio\MDK-ARM\Project.uvprojx
+E:\GitHub\HW_LAB_Project\Example\Realtime_Audio\MDK-ARM\Project.uvprojx
 Project File Date:  12/12/2016
 
 <h2>Output:</h2>
@@ -38,14 +38,14 @@ Package Vendor: ARM
    * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\DT\Desktop\Realtime_Audio\MDK-ARM\RTE
+  E:\GitHub\HW_LAB_Project\Example\Realtime_Audio\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.10.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
