--- a/Example/Realtime_Audio/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
+++ b/Example/Realtime_Audio/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
@@ -27,7 +27,13 @@ Project File Date:  12/12/2016
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F4-Discovery'
-"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+..\Src\main.c(137): warning:  #111-D: statement is unreachable
+    if (BSP_AUDIO_IN_Stop() != AUDIO_OK)
+..\Src\main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=21434 RO-data=846 RW-data=900 ZI-data=18348  
+"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -45,7 +51,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
