--- a/Project/Realtime_Frequency/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
+++ b/Project/Realtime_Frequency/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
@@ -21,19 +21,13 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
-E:\GitHub\HW_LAB_Project\Example\Realtime_Audio\MDK-ARM\Project.uvprojx
+E:\GitHub\HW_LAB_Project\Project\Realtime_Frequency\MDK-ARM\Project.uvprojx
 Project File Date:  12/12/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F4-Discovery'
-compiling main.c...
-..\Src\main.c(137): warning:  #111-D: statement is unreachable
-    if (BSP_AUDIO_IN_Stop() != AUDIO_OK)
-..\Src\main.c: 1 warning, 0 errors
-linking...
-Program Size: Code=21434 RO-data=846 RW-data=900 ZI-data=18348  
-"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 1 Warning(s).
+"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -44,14 +38,14 @@ Package Vendor: ARM
    * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  E:\GitHub\HW_LAB_Project\Example\Realtime_Audio\MDK-ARM\RTE
+  E:\GitHub\HW_LAB_Project\Project\Realtime_Frequency\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.10.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
