--- a/Project/Realtime_Frequency/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
+++ b/Project/Realtime_Frequency/MDK-ARM/STM32F4-Discovery/STM32F4-Discovery.build_log.htm
@@ -22,12 +22,22 @@ Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
 E:\GitHub\HW_LAB_Project\Project\Realtime_Frequency\MDK-ARM\Project.uvprojx
-Project File Date:  12/12/2016
+Project File Date:  12/14/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F4-Discovery'
-"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+..\Src\main.c(88): warning:  #68-D: integer conversion resulted in a change of sign
+  uint32_t nowTick = 0, preTickLED4 = -1,preTickLED5 = -1;
+..\Src\main.c(88): warning:  #68-D: integer conversion resulted in a change of sign
+  uint32_t nowTick = 0, preTickLED4 = -1,preTickLED5 = -1;
+..\Src\main.c(187): warning:  #111-D: statement is unreachable
+    if (BSP_AUDIO_IN_Stop() != AUDIO_OK)
+..\Src\main.c: 3 warnings, 0 errors
+linking...
+Program Size: Code=24606 RO-data=850 RW-data=1032 ZI-data=18344  
+"STM32F4-Discovery\STM32F4-Discovery.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -45,7 +55,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
